--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,14 @@
     <!--BOxicons CDN Link-->
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
-    
+    <div>
+        <div class="product-card">
+            <div class="logo-cart"></div>
+            <img src="img/Adidas-Logo.wine.png" alt="">
+        </div>   
+    </div>
 </body>
+
 </html>
