added logo bag box

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div>
         <div class="product-card">
             <div class="logo-cart"></div>
-            <img src="img/Adidas-Logo.wine.png" alt="">
+            <img src="img/Adidas-Logo.wine.png" alt="logo">
+            <i class='bx bx-shopping-bag'></i>
         </div>   
     </div>
 </body>
