added style in index.html

--- a/E2/index.html
+++ b/E2/index.html
@@ -7,12 +7,25 @@
     <title>E2</title>
     <link rel="stylesheet" href="style.css">
 
+
+    <style>
+        p{
+            color:blue;
+        }
+    </style>
 </head>
 <body>
-    <span style="color: red;">Learnf Html</span>
+    <span style="color: red;">Learn Html</span>
     <br>
-    <span style="color: red;">Learnf Css</span>
+    <span style="color: red;">Learn Css</span>
     <br>
-    <span>Learnf Js</span>
+    <span>Learn Js</span>
+
+    <br><br><br><br>
+
+    <p>Learn Html</p>
+    <p>Learn Css</p>
+    <p>Learn Js</p>
+
 </body>
 </html>
