--- a/E2/index.html
+++ b/E2/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 
 
     <style>
-        p{
+        p, span{
             color:blue;
         }
     </style>
@@ -26,6 +26,10 @@
     <p>Learn Html</p>
     <p>Learn Css</p>
     <p>Learn Js</p>
+    <br><br>
+    <h1>Learn Html</h1>
+    <h1>Learn Css</h1>
+    <h1>Learn Js</h1>
 
 </body>
 </html>
