--- a/E2/index.html
+++ b/E2/index.html
@@ -23,13 +23,14 @@
 
     <br><br><br><br>
 
-    <p>Learn Html</p>
-    <p>Learn Css</p>
-    <p>Learn Js</p>
+    <p class="tage1">Learn Html</p>
+    <p class="tage2">Learn Css</p>
+    <p class="tage3">Learn Js</p>
+    <p id="tage2">Learn PHP</p>
     <br><br>
     <h1>Learn Html</h1>
     <h1>Learn Css</h1>
     <h1>Learn Js</h1>
-
+<!-- فرق ایدی و کلس اینکه کلس رو میشه چند بار ازش استفاده کزد ولی ایدی یکبار بیشتر نمیشه   -->
 </body>
 </html>
