--- a/E2/index.html
+++ b/E2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,11 +10,13 @@
 
 
     <style>
-        p, span{
-            color:blue;
+        p,
+        span {
+            color: blue;
         }
     </style>
 </head>
+
 <body>
     <span style="color: red;">Learn Html</span>
     <br>
@@ -31,6 +34,11 @@
     <h1>Learn Html</h1>
     <h1>Learn Css</h1>
     <h1>Learn Js</h1>
-<!-- فرق ایدی و کلس اینکه کلس رو میشه چند بار ازش استفاده کزد ولی ایدی یکبار بیشتر نمیشه   -->
+    <!-- فرق ایدی و کلس اینکه کلس رو میشه چند بار ازش استفاده کزد ولی ایدی یکبار بیشتر نمیشه   -->
+    <br><br>
+    <h2>Alireza</h2>
+    <h3>Asadi </h3>
+    
 </body>
+
 </html>
