--- a/E3/index.html
+++ b/E3/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E3</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    
+    <header>
+        <a href="http://google.com">google.com</a>
+        <p>click me </p>
+    </header>
+
+    <a href="https://yahoo.com">yahoo.com</a>
+
 </body>
 </html>
