--- a/E3/New folder/index.html
+++ b/E3/New folder/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E3-2</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+
 <body>
-    
+
+    <a href="#" class="a1">google.com</a> <br>
+    <a href="#">yahoo.com</a> <br>
+    <a href="#" class="a2">zicco.ir</a> <br>
+
 </body>
+
 </html>
