--- a/E3/New folder/index.html
+++ b/E3/New folder/index.html
@@ -14,7 +14,12 @@
     <a href="#" class="a1">google.com</a> <br>
     <a href="#">yahoo.com</a> <br>
     <a href="#" class="a2">zicco.ir</a> <br>
-
+    <br><br><br><br>
+    <header>
+    <a href="#" class="a3">google.com</a> <br>
+    <a href="#">yahoo.com</a> <br>
+    <a href="#" class="a4">zicco.ir</a> <br>
+    </header>
 </body>
 
 </html>
