visited and not visite

--- a/E3/New folder/index.html
+++ b/E3/New folder/index.html
@@ -14,12 +14,23 @@
     <a href="#" class="a1">google.com</a> <br>
     <a href="#">yahoo.com</a> <br>
     <a href="#" class="a2">zicco.ir</a> <br>
+
     <br><br><br><br>
+
     <header>
     <a href="#" class="a3">google.com</a> <br>
     <a href="#">yahoo.com</a> <br>
     <a href="#" class="a4">zicco.ir</a> <br>
     </header>
+
+    <br><br><br>
+
+    <a href="https://www.google.com">google.com</a>
+    <br>
+    <a href="https://www.yahoo.com">yahoo.com</a>
+    <br>
+    <a href="https://amir.com">amir.com(site no visited) </a>
+
 </body>
 
 </html>
