--- a/E3/New folder/index.html
+++ b/E3/New folder/index.html
@@ -24,13 +24,13 @@
     </header>
 
     <br><br><br>
-
+    <div class="visit">
     <a href="https://www.google.com">google.com</a>
     <br>
     <a href="https://www.yahoo.com">yahoo.com</a>
     <br>
     <a href="https://amir.com">amir.com(site no visited) </a>
-
+    </div>
 </body>
 
 </html>
