focus in the input

--- a/E3/New folder/index.html
+++ b/E3/New folder/index.html
@@ -31,6 +31,12 @@
     <br>
     <a href="https://amir.com">amir.com(site no visited) </a>
     </div>
+    
+    <br><br><br><br><br>
+
+    <form action="">
+        <input type="text" placeholder="Enter name">
+    </form>
 </body>
 
 </html>
