--- a/E6/index.html
+++ b/E6/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,9 @@
     <title>E6</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+
 <body>
-    
+    <div class="continre"></div>
 </body>
+
 </html>
