--- a/E6/index.html
+++ b/E6/index.html
@@ -11,6 +11,10 @@
 
 <body>
     <div class="continre"></div>
+
+    <div class="mather">
+        <p class="child">learn class</p>
+    </div>
 </body>
 
 </html>
