--- a/E7/index.html
+++ b/E7/index.html
@@ -11,6 +11,13 @@
 
 <body>
 
+    <ul><!-- mother -->
+        <li>coffe</li><!-- child -->
+        <li>Tea</li>
+        <li>milk</li>
+    </ul>
+
+
 </body>
 
 </html>
