--- a/E7/index.html
+++ b/E7/index.html
@@ -12,10 +12,16 @@
 <body>
 
     <ul><!-- mother -->
-        <li>coffe</li><!-- child -->
+        <li>coffe</li><!-- first-child -->
         <li>Tea</li>
         <li>milk</li>
     </ul>
+
+    <ol>
+        <li>football</li><!-- first-child -->
+        <li>boxing</li>
+        <li>volleyball</li>
+    </ol>
 
 
 </body>
