--- a/E7/new document/index.html
+++ b/E7/new document/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    
+    <div class="continer">
+        <p>first paragrph</p>
+        <p>second paragrph</p>
+        <p>thired paragrph</p>
+        <p>foruth paragrph</p>
+        
+    </div>
 </body>
 </html>
