only-child in the css

--- a/E7/New documet(all child)/index.html
+++ b/E7/New documet(all child)/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    
+    <div>
+        <p>this a paragraph</p>
+    </div>
+
+    <div>
+        <p>this a paragraph</p>
+        <span>this a span</span>
+    </div>
 </body>
 </html>
