--- a/E7/New document(nth-child)/index.html
+++ b/E7/New document(nth-child)/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,18 @@
     <title>E7(4)</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+
 <body>
-    
+    <p>the first p</p>
+    <p>the secend p</p>
+    <p>the threid p</p>
+    <p>the fourth p</p>
+    <div>
+        <span>the first h1</span> <br>
+        <span>the secend h1</span><br>
+        <span>the threid h1</span><br>
+        <span>the fourth h1</span><br>
+    </div>
 </body>
+
 </html>
