--- a/E7/New document (nth last child)/index.html
+++ b/E7/New document (nth last child)/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,14 @@
     <title>E7(5)</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+
 <body>
-    
+    <div>
+        <p>this is a p1</p>
+        <p>this is a p2</p>
+        <p>this is a p3</p>
+        <p>this is a p4</p>
+    </div>
 </body>
+
 </html>
