--- a/E8/index.html
+++ b/E8/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E8</title>
+    <title>E8-first of type</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur.1</p>
+    <p>Lorem ipsum dolor sit amet consectetur.2</p>
+    <p>Lorem ipsum dolor sit amet consectetur.3</p>
+    <p>Lorem ipsum dolor sit amet consectetur.4</p>
 </body>
+
 </html>
