--- a/E3/index.html
+++ b/E3/index.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <a href="http://google.com">google.com</a>
-        <p>click me </p>
+        <p>tag p in header </p>
     </header>
-
+    <p>tag p in body</p>
     <a href="https://yahoo.com">yahoo.com</a>
 
 </body>
