--- a/E8/last-of-type(0r)/index.html
+++ b/E8/last-of-type(0r)/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+    <h2>Lorem ipsum dolor sit amet.</h2>
+    <h2>Lorem ipsum dolor sit amet.</h2>
+    <h2>Lorem ipsum dolor sit amet.</h2>
+    <h2>Lorem ipsum dolor sit amet.</h2>
     
 </body>
 </html>
