--- a/E8/nth-of-type/index.html
+++ b/E8/nth-of-type/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <span> Lorem ipsum dolor sit amet.</span>
-    <span> Lorem ipsum dolor sit amet.</span>
-    <span> Lorem ipsum dolor sit amet.</span>
+    <span> Lorem ipsum dolor sit amet.</span><br>
+    <span> Lorem ipsum dolor sit amet.</span><br>
+    <span> Lorem ipsum dolor sit amet.</span><br>
     <span> Lorem ipsum dolor sit amet.</span>
 </body>
 </html>
