nth-last-of-type

--- a/E8/nth-last-of-type/index.html
+++ b/E8/nth-last-of-type/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    
+    <a href="">Lorem ipsum dolor sit amet.</a><br>
+    <a href="">Lorem ipsum dolor sit amet.</a><br>
+    <a href="">Lorem ipsum dolor sit amet.</a><br>
+    <a href="">Lorem ipsum dolor sit amet.</a>
 </body>
 </html>
