only-of-type in the css

--- a/E8/only-of-type/index.html
+++ b/E8/only-of-type/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    
+    <div class="only">
+        <p>hello man</p>
+        <h1>hello world</h1>
+        <h2>nice day</h2>
+    </div>
+
+    <div class="two">
+        <p>tag p1</p>
+        <p>tag p2</p>
+        <p>tag p3</p>
+    </div>
+    <div class="h1">
+        <h1>Lorem, ipsum.1</h1>
+        <h1>Lorem, ipsum.2</h1>
+        <h1>Lorem, ipsum.3</h1>
+    </div>
+    <div class="h2">
+        <h2>Lorem, ipsum dolor.</h2>
+    </div>
 </body>
 </html>
