--- a/E10/index.html
+++ b/E10/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <div class="div1"></div>
-    <div class="div2"></div>
-    <div class="div3"></div>
+    <div class="div1"></div><br>
+    <div class="div2"></div><br>
+    <div class="div3"></div><br>
+    <div class="div4"></div><br>
+
 </body>
 </html>
