rgba in the css

--- a/E10/index.html
+++ b/E10/index.html
@@ -12,6 +12,7 @@
     <div class="div2"></div><br>
     <div class="div3"></div><br>
     <div class="div4"></div><br>
+    <div class="div5"></div><br>
 
 </body>
 </html>
