--- a/E10/index.html
+++ b/E10/index.html
@@ -13,6 +13,7 @@
     <div class="div3"></div><br>
     <div class="div4"></div><br>
     <div class="div5"></div><br>
+    <div class="div6"></div><br>
 
 </body>
 </html>
