--- a/E11/index.html
+++ b/E11/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <p class="p1">باتو انروز که شطرنچ محبت چیدم ///ماتی خود ز تو در بازی اول دیدم</p>
+    <p class="p2">دوش چه خورده ای دلا ///راست بگو نهان مکن</p>
 </body>
 </html>
