text-decoration in the css

--- a/E11/index.html
+++ b/E11/index.html
@@ -52,6 +52,8 @@
         شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این
         صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز
         شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</p>
+
+        <p class="p5">بنمای رخ که باغ گلستان ارزوست ///بگشای لب که قند فراوانم ارزوست</p>
 </body>
 
 </html>
