--- a/E11/index.html
+++ b/E11/index.html
@@ -54,6 +54,7 @@
         شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</p>
 
         <p class="p5">بنمای رخ که باغ گلستان ارزوست ///بگشای لب که قند فراوانم ارزوست</p>
+        <p class="p6">حال ان دارم که امشب می پرست //پایکوبان تا سحر جامی بدست حال ان دارم که امشب می پرست //پایکوبان تا سحر جامی بدست حال ان دارم که امشب می پرست //پایکوبان تا سحر جامی بدست  حال ان دارم که امشب می پرست //پایکوبان تا سحر جامی بدسحال ان دارم که امشب می پرست //پایکوبان تا سحر جامی بدسحال ان دارم که امشب می پرست //پایکوبان تا سحر جامی بدسحال ان دارم که امشب می پرست //پایکوبان تا سحر جامی بدسحال ان دارم که امشب می پرست //پایکوبان تا سحر جامی بدسحال ان دارم که امشب می پرست //پایکوبان تا سحر جامی بدسحال ان دارم که امشب می پرست //پایکوبان تا سحر جامی بدس</p>
 </body>
 
 </html>
