letter-spacing in the css

--- a/E11/index.html
+++ b/E11/index.html
@@ -61,6 +61,7 @@
         بدسحال ان دارم که امشب می پرست //پایکوبان تا سحر جامی بدسحال ان دارم که امشب می پرست //پایکوبان تا سحر جامی بدس
     </p>
     <p class="p7">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+    <p class="p8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, in. Ea maxime, quam odio ullam excepturi sunt nisi illum dolorum repudiandae assumenda eius ad praesentium magni ducimus hic saepe sed.</p>
 </body>
 
 </html>
