word-spacing in the css

--- a/E11/index.html
+++ b/E11/index.html
@@ -62,6 +62,7 @@
     </p>
     <p class="p7">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
     <p class="p8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, in. Ea maxime, quam odio ullam excepturi sunt nisi illum dolorum repudiandae assumenda eius ad praesentium magni ducimus hic saepe sed.</p>
+    <p class="p9">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora nesciunt necessitatibus id esse quas cum officiis commodi aliquam,...... hic sed.</p>
 </body>
 
 </html>
