white-space in the css

--- a/E12/index.html
+++ b/E12/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E12</title>
+    <title>E12-white-space</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    
+    <p class="a">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consectetur eius, animi unde nesciunt tempora nihil doloribus nobis consequatur fugiat.</p>
+    <p class="b">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consectetur eius, animi unde nesciunt tempora nihil doloribus nobis consequatur fugiat.</p>
+    <p class="c">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consectetur eius, animi unde nesciunt tempora nihil doloribus nobis consequatur fugiat.</p>
 </body>
 </html>
