white-space:pre in the css

--- a/E12/index.html
+++ b/E12/index.html
@@ -10,6 +10,10 @@
 <body>
     <p class="a">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consectetur eius, animi unde nesciunt tempora nihil doloribus nobis consequatur fugiat.</p>
     <p class="b">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consectetur eius, animi unde nesciunt tempora nihil doloribus nobis consequatur fugiat.</p>
-    <p class="c">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consectetur eius, animi unde nesciunt tempora nihil doloribus nobis consequatur fugiat.</p>
+    <p class="c">چشم ها را باید شست...
+                جور دیگر باید دید...
+                     زیر باران باید رفت....
+                            این دنیا را باید رها کرد...
+    </p>
 </body>
 </html>
