word-break in the css

--- a/E12/word-breack/index.html
+++ b/E12/word-breack/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E12</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+
 <body>
-    
+    <h1> the word-breack property</h1>
+    <p class="a">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quia, similique vero non dolores illo
+        excepturi atque, ipsa ea, eligendi ipsum eaque quos dolore laborum facere sed neque quaerat aut fugiat harum
+        amet ex suscipit. Itaque corporis enim animi sint nemo perspiciatis nesciunt, fugiat ex deleniti provident
+        placeat sed dolores?</p><br><br>
+
+    <p class="b">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quia, similique vero non dolores illo
+        excepturi atque, ipsa ea, eligendi ipsum eaque quos dolore laborum facere sed neque quaerat aut fugiat harum
+        amet ex suscipit. Itaque corporis enim animi sint nemo perspiciatis nesciunt, fugiat ex deleniti provident
+        placeat sed dolores?</p><br><br>
+    <p class="c">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quia, similique vero non dolores illo
+        excepturi atque, ipsa ea, eligendi ipsum eaque quos dolore laborum facere sed neque quaerat aut fugiat harum
+        amet ex suscipit. Itaque corporis enim animi sint nemo perspiciatis nesciunt, fugiat ex deleniti provident
+        placeat sed dolores?</p><br><br>
 </body>
+
 </html>
