--- a/E12/word-breack/index.html
+++ b/E12/word-breack/index.html
@@ -24,6 +24,40 @@
         excepturi atque, ipsa ea, eligendi ipsum eaque quos dolore laborum facere sed neque quaerat aut fugiat harum
         amet ex suscipit. Itaque corporis enim animi sint nemo perspiciatis nesciunt, fugiat ex deleniti provident
         placeat sed dolores?</p><br><br>
+    <p class="d">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt natus ratione doloremque architecto
+        corrupti, inventore provident, ducimus atque incidunt itaque, laborum ea! Veniam, quasi deleniti ex id soluta
+        quae hic voluptatibus, ipsa voluptates, doloremque praesentium! Deserunt laudantium rerum error, perspiciatis
+        laborum accusantium corrupti molestiae nam non ut odio placeat sapiente, sunt assumenda? Culpa repellat eos
+        soluta temporibus maiores cum quis fugiat quas eligendi deleniti, sint pariatur dolor iusto numquam illo? Ipsam
+        reiciendis optio ea iure iusto tenetur praesentium incidunt perferendis nam. Explicabo dolor velit suscipit
+        possimus? Eos, rem ipsam! Cumque quisquam explicabo fugiat eos est, qui at adipisci ipsam commodi delectus
+        itaque atque sunt vel, perspiciatis nobis, porro ratione harum iure magni veniam nesciunt nisi? Ad beatae
+        explicabo reprehenderit tempore esse ullam est error vero facere atque assumenda quae qui commodi maiores, quo
+        provident doloribus. Optio nostrum nobis impedit necessitatibus tenetur similique nemo ipsam itaque, ducimus
+        porro perspiciatis beatae officia iure molestiae cum unde, facilis fugiat ab quam architecto laborum dolore.
+        Quod consequatur et illum cumque voluptatibus! Reprehenderit provident officia voluptatibus sed debitis? Sunt
+        omnis est eos id, voluptas qui, quasi, porro architecto vitae fuga illum sapiente. Maiores, repellat hic
+        excepturi rerum, unde quo molestiae cupiditate sint ab reiciendis debitis quibusdam soluta, libero deleniti
+        provident neque? Assumenda aliquam libero nemo maxime quia dignissimos accusamus incidunt, dolores distinctio
+        quidem ab mollitia recusandae atque reprehenderit quis nihil, quasi aut animi perferendis voluptatibus quam
+        culpa. Minus aspernatur magnam expedita possimus fugiat a fugit molestiae ducimus dolore voluptatum unde cumque
+        facere nobis quos impedit ad amet necessitatibus enim quam provident maxime, blanditiis, quod sapiente odit.
+        Blanditiis, esse qui! Accusamus earum sed minus ab mollitia sunt assumenda, quam impedit id aspernatur dolorum
+        esse, veniam quaerat nemo tempore quibusdam odit, modi voluptas unde harum! Quo sed mollitia, aliquid
+        accusantium aliquam ullam quos ut culpa sunt magni non, dolorem omnis rerum illum, quas tenetur. Voluptas quasi
+        reprehenderit, nam, suscipit facere in modi deleniti molestiae veritatis delectus odio, minima magnam itaque
+        ratione ab a id ducimus! Sit earum error placeat consectetur quos iure non in asperiores dignissimos? Alias quia
+        nemo maiores nihil autem quam rem, optio cupiditate ipsa nesciunt saepe nobis, iste provident dolor omnis totam
+        ab earum eos commodi laborum, odio culpa? Sit magni laboriosam amet blanditiis quas perspiciatis laudantium
+        alias animi labore ea deleniti, at nesciunt atque itaque fugiat vitae ab modi? Voluptates labore adipisci nihil
+        beatae saepe odio ducimus tempora, tempore esse placeat doloremque suscipit inventore totam quibusdam facilis
+        sit quas ullam? Porro ad nisi, numquam est dignissimos libero iure quisquam soluta et deleniti? Quia odit
+        officiis consequuntur eius veritatis architecto voluptate delectus rem a eos dolores nihil, ut animi dicta
+        quisquam accusamus commodi reprehenderit error pariatur provident. Architecto quis magni assumenda veniam?
+        Dolores hic totam cupiditate ipsam beatae quas nam quod nostrum libero esse facere repellat fugit dicta, optio
+        adipisci officiis quidem officia quia ipsa inventore rerum unde pariatur voluptatem accusamus! Ipsam veritatis
+        quo fugiat deleniti nostrum sint, earum ducimus omnis dolorum iure at quidem. Sed, harum? Ipsa nostrum sit,
+        rerum quidem eius corporis.</p>
 </body>
 
 </html>
