word-break in the css

--- a/E13/index.htm
+++ b/E13/index.htm
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,16 @@
     <title>E13</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+
 <body>
-    
+    <div class="div1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum aspernatur sunt magnam aperiam
+        dolor accusantium cumque eius. Inventore atque assumenda sunt nam eos voluptatem distinctio eaque mollitia
+        dolore nostrum a fuga nobis aut ullam, sequi ipsum eum? Illo assumenda beatae neque rerum unde laboriosam
+        minima. Unde porro cupiditate soluta, ut vero odio voluptate alias commodi placeat. Nulla aperiam necessitatibus
+        maxime vitae ab, perspiciatis totam labore quaerat incidunt, cupiditate quo quibusdam excepturi optio magnam,
+        modi vel? Voluptatem illo error quibusdam ad?</div>
+    <div class="div2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate reiciendis libero eaque autem a dicta officia provident nostrum illo id, illum quibusdam, tempore in architecto quos. Incidunt, odit porro.</div>
+    <div class="div3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, hic? Obcaecati, possimus quidem.</div>
 </body>
+
 </html>
