overflow :scroll in the css

--- a/E13/overflow/index.html
+++ b/E13/overflow/index.html
@@ -10,10 +10,10 @@
 <body>
     <br><br>
     <div class="a">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, delectus.
+        Lorem ipsum dolor sit amet consectetur adipisicing .
     </div><br><br>
     <div class="b">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, delectus.
+        Lorem ipsum dolor sit amet consectetur adipisicing 
 
     </div><br><br>
     <div class="c">
