text-overflow in the css

--- a/E13/text-overflow/index.html
+++ b/E13/text-overflow/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E13-text-overflow</title>
+    <title>E13-text-orverflow</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    
+    <br><br>
+    <div class="a">
+        Lorem ipsum dolor sit ametafddf consectetur adipisicing .
+    </div><br><br>
+    <div class="b">
+        Lorem ipsum dolor sit ametadfdsa consectetur adipisicing afddsf
+    </div>
 </body>
 </html>
