font-weight and font size in the css

--- a/E14/index.html
+++ b/E14/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    
+    <p>this a some text .</p>
+    <p>this a some text .</p>
+    <p>this a some text .</p>
+    <p>this a some text .</p>
 </body>
 </html>
