--- a/E14/index.html
+++ b/E14/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <p>this a some text .</p>
-    <p>this a some text .</p>
-    <p>this a some text .</p>
-    <p>this a some text .</p>
+    <p class="a1">this a some text .</p>
+    <p class="a2">this a some text .</p>
+    <p class="a3">this a some text .</p>
+    <p class="a4">this a some text .</p>
 </body>
 </html>
