--- a/E15/index.html
+++ b/E15/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,15 @@
     <title>E15</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+
 <body>
-    
+    <ul>
+        <li class="li1">Home</li>
+        <li>Work</li>
+        <li>Many</li>
+    </ul>
+    <hr>
+
 </body>
+
 </html>
