list-style-image in the css

--- a/E15/project/index.html
+++ b/E15/project/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    
+    <ul>
+        <li>Home</li>
+        <li>Work</li>
+        <li>Maney</li>
+    </ul>
 </body>
 </html>
