--- a/E15/project/index.html
+++ b/E15/project/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <ul>
-        <li>Home</li>
+        <li class="li1">Home</li>
         <li>Work</li>
         <li>Maney</li>
     </ul>
