--- a/E16/index.html
+++ b/E16/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,29 @@
     <title>menu-E16</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+
 <body>
-    
+    <ul>
+        <li><a href="">Home</a>
+            <ul><!-- زیر منو -->
+                <li><a href="">Home 1</a></li>
+                <li><a href="">Home 2</a></li>
+                <li><a href="">Home 3</a></li>
+                <li><a href="">Home 4</a></li>
+
+            </ul>
+        </li>
+        <li><a href="">Softwar</a></li>
+        <li><a href="">ADS</a></li>
+        <li><a href="">About us</a>
+            <ul>
+                <li><a href="">telgram 1</a></li>
+                <li><a href="">instagram 2</a></li>
+                <li><a href="">phone 3</a></li>
+            </ul>
+        </li>
+        <li><a href="">Team</a></li>
+    </ul>
 </body>
+
 </html>
